fixed hero image not showing on build

--- a/weldingStore/src/landingPage/Hero.css
+++ b/weldingStore/src/landingPage/Hero.css
@@ -1,7 +1,7 @@
 .heroContainer {
   width: 100vw;
   height: 55vw;
-  background-image: url('./images/heroImages/landinghero.png');
+  background-image: url('/images/heroImages/landinghero.png');
   background-size: cover;
   background-attachment: fixed; 
   background-position: 0px 0vw;
